--- a/LC-Website-CSS-Basic.css
+++ b/LC-Website-CSS-Basic.css
@@ -90,11 +90,11 @@ hr {
 
 .lc-table th {
 	background-color: #cce5ff;
-	border: 1px solid black;
+	border: 1px solid rgb(0 0 0 / 25%);
 }
 
 .lc-table td {
-	border: 1px solid black;
+	border: 1px solid rgb(0 0 0 / 25%);
 }
 
 /* Tables */
